--- a/how.ipynb
+++ b/how.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-18T23:21:09.739783Z",
-     "start_time": "2024-12-18T23:21:09.424154Z"
+     "end_time": "2024-12-18T23:33:37.630154Z",
+     "start_time": "2024-12-18T23:33:37.310220Z"
     }
    },
    "source": "from src.ollamamia import Ollamamia",
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T23:21:09.755862Z",
-     "start_time": "2024-12-18T23:21:09.740963Z"
+     "end_time": "2024-12-18T23:33:38.331677Z",
+     "start_time": "2024-12-18T23:33:38.167161Z"
     }
    },
    "cell_type": "code",
@@ -36,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T23:21:10.041069Z",
-     "start_time": "2024-12-18T23:21:10.017886Z"
+     "end_time": "2024-12-18T23:33:41.244996Z",
+     "start_time": "2024-12-18T23:33:41.234150Z"
     }
    },
    "cell_type": "code",
@@ -47,21 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "['llama3.2:1b',\n",
-       " 'snowflake-arctic-embed:137m',\n",
-       " 'paraphrase-multilingual:latest',\n",
-       " 'bge-m3:latest',\n",
-       " 'bge-large:latest',\n",
-       " 'all-minilm:latest',\n",
-       " 'snowflake-arctic-embed2:latest',\n",
-       " 'snowflake-arctic-embed:33m',\n",
-       " 'snowflake-arctic-embed:110m',\n",
-       " 'snowflake-arctic-embed:latest',\n",
-       " 'mxbai-embed-large:latest',\n",
-       " 'nomic-embed-text:latest',\n",
-       " 'gemma2:2b',\n",
-       " 'gemma:latest',\n",
-       " 'gemma-2b-it-gguf:latest']"
+       "[]"
       ]
      },
      "execution_count": 3,
@@ -72,6 +58,97 @@
    "execution_count": 3
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-18T23:44:07.607280Z",
+     "start_time": "2024-12-18T23:43:29.684415Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "ollamamia.funcs.pull(\"gemma2:2b\")",
+   "id": "b1dbb4142e87ecbd",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pulling manifest\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pulling 7462734796d6: 100%|██████████| 1.63G/1.63G [00:29<00:00, 35.8MB/s]\n",
+      "pulling e0a42594d802:   0%|          | 0.00/358 [00:00<?, ?B/s]\u001B[A\n",
+      "pulling e0a42594d802: 100%|██████████| 358/358 [00:00<00:00, 752B/s]\u001B[A\n",
+      "\n",
+      "pulling 097a36493f71:   0%|          | 0.00/8.43k [00:00<?, ?B/s]\u001B[A\u001B[A\n",
+      "\n",
+      "pulling 097a36493f71: 100%|██████████| 8.43k/8.43k [00:00<00:00, 23.8kB/s]\u001B[A\u001B[A\n",
+      "\n",
+      "\n",
+      "pulling 2490e7468436:   0%|          | 0.00/65.0 [00:00<?, ?B/s]\u001B[A\u001B[A\u001B[A\n",
+      "\n",
+      "\n",
+      "pulling 2490e7468436: 100%|██████████| 65.0/65.0 [00:00<00:00, 121B/s]\u001B[A\u001B[A\u001B[A\n",
+      "\n",
+      "\n",
+      "\n",
+      "pulling e18ad7af7efb:   0%|          | 0.00/487 [00:00<?, ?B/s]\u001B[A\u001B[A\u001B[A\u001B[A\n",
+      "\n",
+      "\n",
+      "\n",
+      "pulling e18ad7af7efb: 100%|██████████| 487/487 [00:00<00:00, 911B/s]\u001B[A\u001B[A\u001B[A\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "verifying sha256 digest\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pulling 7462734796d6: 100%|██████████| 1.63G/1.63G [00:36<00:00, 44.8MB/s]\n",
+      "pulling e0a42594d802: 100%|██████████| 358/358 [00:06<00:00, 52.0B/s]\n",
+      "pulling 097a36493f71: 100%|██████████| 8.43k/8.43k [00:05<00:00, 1.56kB/s]\n",
+      "pulling 2490e7468436: 100%|██████████| 65.0/65.0 [00:03<00:00, 16.6B/s]\n",
+      "pulling e18ad7af7efb: 100%|██████████| 487/487 [00:02<00:00, 201B/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "writing manifest\n",
+      "success\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "# infer",
@@ -80,8 +157,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T23:22:26.438268Z",
-     "start_time": "2024-12-18T23:22:24.944351Z"
+     "end_time": "2024-12-18T23:44:29.155283Z",
+     "start_time": "2024-12-18T23:44:18.542038Z"
     }
    },
    "cell_type": "code",
@@ -100,21 +177,21 @@
     {
      "data": {
       "text/plain": [
-       "\"I am doing well!  As an AI, I don't experience emotions or physical states like humans do.  But I'm here and ready to assist you. 😊 \\n\\nWhat can I help you with today? Whether it's answering a question, writing something creative, or just having a casual conversation, I'm happy to be of service!  \\n\\n\\nLet me know how I can make your day better! \\n\""
+       "\"Hello!  I'm doing well, thank you. 😊 As a large language model, I don't have feelings or experiences like humans do, but I am always here and ready to assist you with any questions or tasks you may have. How can I help you today? \\n\\nLet me know if you need anything!  \\n\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T23:23:19.781937Z",
-     "start_time": "2024-12-18T23:23:19.778863Z"
+     "end_time": "2024-12-18T23:44:31.673574Z",
+     "start_time": "2024-12-18T23:44:31.670278Z"
     }
    },
    "cell_type": "code",
@@ -124,15 +201,15 @@
     {
      "data": {
       "text/plain": [
-       "[GenerateResponse(model='gemma2:2b', created_at='2024-12-18T23:22:26.434539Z', done=True, done_reason='stop', total_duration=1486102625, load_duration=37772542, prompt_eval_count=25, prompt_eval_duration=125000000, eval_count=90, eval_duration=1322000000, response=\"I am doing well!  As an AI, I don't experience emotions or physical states like humans do.  But I'm here and ready to assist you. 😊 \\n\\nWhat can I help you with today? Whether it's answering a question, writing something creative, or just having a casual conversation, I'm happy to be of service!  \\n\\n\\nLet me know how I can make your day better! \\n\", context=[106, 1645, 108, 17534, 235269, 1368, 708, 692, 235336, 708, 692, 4634, 235336, 11941, 235248, 235274, 235276, 235276, 3907, 107, 108, 106, 2516, 108, 235285, 1144, 3900, 1578, 235341, 139, 2169, 671, 16481, 235269, 590, 1453, 235303, 235251, 3281, 22079, 689, 6915, 6246, 1154, 17611, 749, 235265, 139, 1860, 590, 235303, 235262, 1517, 578, 5628, 577, 5422, 692, 235265, 44416, 235248, 109, 1841, 798, 590, 1707, 692, 675, 3646, 235336, 19896, 665, 235303, 235256, 39534, 476, 2872, 235269, 6706, 2775, 12354, 235269, 689, 1317, 3372, 476, 14044, 12836, 235269, 590, 235303, 235262, 4915, 577, 614, 576, 2566, 235341, 139, 110, 5331, 682, 1230, 1368, 590, 798, 1501, 861, 1744, 2525, 235341, 235248, 108])]"
+       "[GenerateResponse(model='gemma2:2b', created_at='2024-12-18T23:44:28.860469844Z', done=True, done_reason='stop', total_duration=10314649838, load_duration=1861398584, prompt_eval_count=25, prompt_eval_duration=769000000, eval_count=70, eval_duration=7682000000, response=\"Hello!  I'm doing well, thank you. 😊 As a large language model, I don't have feelings or experiences like humans do, but I am always here and ready to assist you with any questions or tasks you may have. How can I help you today? \\n\\nLet me know if you need anything!  \\n\", context=[106, 1645, 108, 17534, 235269, 1368, 708, 692, 235336, 708, 692, 4634, 235336, 11941, 235248, 235274, 235276, 235276, 3907, 107, 108, 106, 2516, 108, 4521, 235341, 139, 235285, 235303, 235262, 3900, 1578, 235269, 7593, 692, 235265, 44416, 1877, 476, 2910, 5255, 2091, 235269, 590, 1453, 235303, 235251, 791, 14690, 689, 12219, 1154, 17611, 749, 235269, 901, 590, 1144, 2593, 1517, 578, 5628, 577, 5422, 692, 675, 1089, 3920, 689, 13333, 692, 1249, 791, 235265, 2250, 798, 590, 1707, 692, 3646, 235336, 235248, 109, 5331, 682, 1230, 1013, 692, 1476, 4341, 235341, 139, 108])]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -155,17 +232,30 @@
    "id": "2a6bcad3bd26a077"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-18T23:45:39.444504Z",
+     "start_time": "2024-12-18T23:45:25.200538Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "prompt = \"\"\n",
-    "model = ollamamia.init.cli_chat()\n",
-    "\n",
-    "model << prompt"
+   "source": "ollamamia.ChitChat(model_name=\"gemma2:2b\")",
+   "id": "e2033077314328e1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      ">>> \u001B[30msend your message \u001B[0mI'm doing well, thank you! 😊  How about yourself? \n",
+      "\n",
+      "\n",
+      ">>> \u001B[30msend your message \u001B[0m"
+     ]
+    }
    ],
-   "id": "e2033077314328e1"
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -174,23 +264,40 @@
    "id": "4188b06b763c8f8f"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-18T23:45:57.182996Z",
+     "start_time": "2024-12-18T23:45:57.171027Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "model.stop()",
-   "id": "5019a8de44026980"
+   "source": [
+    "ollamamia.ls(details=True, log=True)\n",
+    "ollamamia.rm()"
+   ],
+   "id": "81bced5cff67cd8d",
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Ollamamia' object has no attribute 'ls'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[11], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m ollamamia\u001B[38;5;241m.\u001B[39mls(details\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, log\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m      2\u001B[0m ollamamia\u001B[38;5;241m.\u001B[39mrm()\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Ollamamia' object has no attribute 'ls'"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "ollamamia.ls(details=True, log=True)\n",
-    "ollamamia.rm()"
-   ],
-   "id": "81bced5cff67cd8d"
+   "source": "ollamamia.stop()",
+   "id": "c103b6fab8f815cc"
   },
   {
    "metadata": {},
