--- a/how.ipynb
+++ b/how.ipynb
@@ -6,32 +6,32 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-22T10:31:03.833754Z",
-     "start_time": "2024-12-22T10:31:03.574630Z"
+     "end_time": "2024-12-23T09:08:20.757838Z",
+     "start_time": "2024-12-23T09:08:20.494739Z"
     }
    },
    "source": "from src.ollamamia import Ollamamia",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T10:31:05.291571Z",
-     "start_time": "2024-12-22T10:31:05.275956Z"
+     "end_time": "2024-12-23T09:08:21.982030Z",
+     "start_time": "2024-12-23T09:08:21.963459Z"
     }
    },
    "cell_type": "code",
    "source": "ollamamia = Ollamamia(on_docker=False)",
    "id": "9bf6ef756a0b7d8c",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T10:31:09.314256Z",
-     "start_time": "2024-12-22T10:31:09.310511Z"
+     "end_time": "2024-12-22T12:08:48.753912Z",
+     "start_time": "2024-12-22T12:08:48.751246Z"
     }
    },
    "cell_type": "code",
@@ -41,39 +41,39 @@
    ],
    "id": "d4106c5a776a477c",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T10:32:19.680941Z",
-     "start_time": "2024-12-22T10:32:19.677799Z"
+     "end_time": "2024-12-22T12:09:17.336801Z",
+     "start_time": "2024-12-22T12:09:17.334418Z"
     }
    },
    "cell_type": "code",
-   "source": "model_config.options.num_predict = 12\n",
+   "source": "model_config.options.num_predict = 100\n",
    "id": "7524337dc87ec0d1",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T10:32:27.134495Z",
-     "start_time": "2024-12-22T10:32:20.688646Z"
+     "end_time": "2024-12-22T12:08:50.610193Z",
+     "start_time": "2024-12-22T12:08:50.606941Z"
     }
    },
    "cell_type": "code",
    "source": "ollamamia[\"gemma2:2b\"] = model_config",
    "id": "645be39e091efb32",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T01:28:34.091017Z",
-     "start_time": "2024-12-22T01:28:31.763667Z"
+     "end_time": "2024-12-22T12:09:25.353252Z",
+     "start_time": "2024-12-22T12:09:24.221870Z"
     }
    },
    "cell_type": "code",
@@ -83,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "'```json\\n{\\n  \"time\": \"morning\",\\n  \"hour\": 1\\n}\\n```\\n\\n**Explanation:**\\n\\n* **`time`**: This key indicates the time of day, and it\\'s set to `morning`.\\n* **`hour`**: This key stores the hour (in this case, 1 for morning).\\n\\n\\nLet me know if you want to try a different scenario or have more questions about JSON. \\n'"
+       "'{\\n  \"status\": \"morning\",\\n  \"time\": 1\\n}\\n\\n\\n \\n  \\n  \\n  \\n  \\n  \\n  \\n  \\n  \\n  \\n  \\n  \\n  \\n  \\n  \\n'"
       ]
      },
      "execution_count": 9,
@@ -94,12 +94,17 @@
    "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-22T12:09:21.032915Z",
+     "start_time": "2024-12-22T12:09:21.029714Z"
+    }
+   },
    "cell_type": "code",
+   "source": "model_config.format = \"json\"",
+   "id": "29c45ed6aa1bea72",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "29c45ed6aa1bea72"
+   "execution_count": 8
   },
   {
    "metadata": {
@@ -152,6 +157,60 @@
     }
    ],
    "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-23T09:09:28.991249Z",
+     "start_time": "2024-12-23T09:09:28.988408Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "model_config = ollamamia.model_config(model_name=\"snowflake-arctic-embed:137m\", task=\"embed\")",
+   "id": "b361733061dc4f47",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-23T09:09:29.310377Z",
+     "start_time": "2024-12-23T09:09:29.307858Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "ollamamia[\"model_1\"] = model_config",
+   "id": "7a1351bf426241c4",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-23T09:11:02.753993Z",
+     "start_time": "2024-12-23T09:11:02.445111Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for i in range(20):\n",
+    "    ollamamia[\"model_1\"] << \"\"\"\n",
+    "    hello how are you pass (a liquid, gas, light, or sound) through a device\n",
+    "     to remove unwante material. the patient is hooked up to a dialysis machine twice a week\n",
+    "      to filter out the cholesterol in the blood\n",
+    "      \"\"\""
+   ],
+   "id": "c12999a76713faa9",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "f0ffd74d7d5dbed3"
   }
  ],
  "metadata": {
