--- a/how.ipynb
+++ b/how.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-24T22:52:44.251979Z",
-     "start_time": "2024-12-24T22:52:44.022076Z"
+     "end_time": "2024-12-25T12:51:00.938849Z",
+     "start_time": "2024-12-25T12:51:00.636579Z"
     }
    },
    "source": "from ollamamia import Ollamamia",
@@ -28,8 +28,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-24T22:52:44.318212Z",
-     "start_time": "2024-12-24T22:52:44.310603Z"
+     "end_time": "2024-12-25T12:51:00.942059Z",
+     "start_time": "2024-12-25T12:51:00.940203Z"
     }
    },
    "cell_type": "code",
@@ -39,30 +39,59 @@
    "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-25T12:51:02.183215Z",
+     "start_time": "2024-12-25T12:51:02.180096Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "model_name = \"gemma2:2b\"",
-   "id": "86a9775440ff0895"
+   "id": "86a9775440ff0895",
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-24T22:52:44.634366Z",
-     "start_time": "2024-12-24T22:52:44.631796Z"
+     "end_time": "2024-12-25T12:52:41.696835Z",
+     "start_time": "2024-12-25T12:52:41.693654Z"
     }
    },
    "cell_type": "code",
    "source": [
     "model_config = ollamamia.model_config(model_name=model_name, task=\"generate\")\n",
     "model_config.options.temperature = 0.0\n",
-    "model_config.format = 'json'\n",
+    "model_config.options.stop = [\"}\"] \n",
     "model_config.options.num_predict = 100"
    ],
    "id": "d4106c5a776a477c",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-25T12:53:44.002847Z",
+     "start_time": "2024-12-25T12:53:38.609504Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "ollamamia[model_name:model_config:\"return in json: phone is 3000. your answer should be without \\n or new line\"]",
+   "id": "f69621b3e0878078",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"phone\": 3000'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
   },
   {
    "metadata": {},
